# dd

./: .gitignore  build.sh  package-lock.json  package.json  start.sh
.github/workflows/: build.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  monthly.rs  sync.rs
